<resources>
    <string name="app_name">Lab_MyCalculator</string>
    <string name="cal_std_weight">Calculate Standard Weight</string>
    <string name="gender">Gender:</string>
    <string name="mal">Male</string>
    <string name="fem">Female</string>
    <string name="height">Height:</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="cal">Calculate</string>
    <string name="you_are">You are</string>
    <string name="your_height">Your height is</string>
    <string name="std_weight_is">The standard weight is</string>
</resources>
