<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_std_weight"
        android:textSize="25sp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="53dp"
        />

    <TextView
        android:id="@+id/gend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="15dp"
        android:layout_marginTop="255dp"
        android:layout_marginLeft="70dp"
        />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/maleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="250dp"
            android:text="@string/mal"
            android:textSize="15dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/femaleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fem"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="-32dp"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="15dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="80dp"
        />

    <EditText
        android:id="@+id/feetNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:ems="2"
        android:inputType="number"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="135dp"/>

    <TextView
        android:id="@+id/feetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feet"
        android:textSize="15dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="300dp"
        />

    <EditText
        android:id="@+id/inchesNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:ems="2"
        android:inputType="number"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="210dp"
        />

    <TextView
        android:id="@+id/inchesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inches"
        android:textSize="15dp"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="300dp"
        />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="150dp"
        />


</RelativeLayout>